# FastTrainService

./: .codeclimate.yml  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-server  Doxyfile  LICENSE  README.md  docker-compose.yml  install_dependencies.sh
Client/: CMakeLists.txt  Client.cpp  Client.hpp  DateSelector.cpp  DateSelector.hpp  InformationPanel.cpp  InformationPanel.hpp  SearchButton.hpp  main.cpp  moc_ActionSelector.cpp_parameters  moc_CitySelector.cpp_parameters  moc_DateWidget.cpp_parameters  moc_SearchButton.cpp_parameters
Client/Client/: ActionSelector.hpp  CMakeLists.txt  Calendar.cpp  Calendar.hpp  CitySelector.cpp  DateSelector.cpp  DateWidget.hpp  HourWidget.hpp  SearchWidget.hpp  moc_ActionSelector.cpp  moc_CitySelector.cpp  moc_DateWidget.cpp  moc_SearchButton.cpp  moc_SearchButton.cpp_parameters
Client/Tables/: ArrivalsTable.cpp  ArrivalsTable.hpp  RoutesTable.hpp
Client/__/__/__/__/__/__/__/__/__/__/: moc_MainWindow.cpp_parameters
Client/src/: ArrivalsTab.cpp  ArrivalsTab.hpp  CitySelector.cpp  CitySelector.hpp  Client.cpp  Client.hpp  DateSelector.cpp  DateSelector.hpp  DeparturesTab.cpp  DeparturesTab.hpp  RoutesTab.cpp  RoutesTab.hpp  UpdateWidget.cpp  UpdateWidget.hpp  WidgetFactory.cpp  WidgetFactory.hpp  main.cpp
Client/src/Tables/: ArrivalsTable.cpp  ArrivalsTable.hpp  DeparturesTable.cpp  DeparturesTable.hpp  PathsTable.cpp  PathsTable.hpp  RoutesTable.hpp
Server/: CMakeLists.txt  Dockerfile
Server/docker/: Dockerfile-build-environment
Server/docs/latex/: TehnicalSpecsRetele.aux  TehnicalSpecsRetele.tex  TehnicalSpecsRetele.toc
Server/include/: ClientThread.hpp  Server.hpp
Server/src/: ClientThread.cpp  ClientThread.hpp  Server.cpp  main.cpp
Server/tests/: CMakeLists.txt  ServerTest.cpp  ServerTest.hpp  TestClient.hpp
TrainProvider/: CMakeLists.txt
TrainProvider/include/: DatabaseManager.hpp  DatabaseUtils.hpp  Provider.hpp  ProviderFactory.hpp  SingleQueryProvider.hpp
TrainProvider/src/: DatabaseManager.cpp  DatabaseUtils.cpp  ProviderFactory.cpp
TrainProvider/src/Providers/: ArrivalsProvider.cpp  ArrivalsProvider.hpp  AutocompleteProvider.cpp  AutocompleteProvider.hpp  DelayResetProvider.cpp  DelayResetProvider.hpp  DeparturesProvider.cpp  DeparturesProvider.hpp  ErrorProvider.cpp  ErrorProvider.hpp  MultiQueryProvider.cpp  MultiQueryProvider.hpp  Provider.cpp  ShortestPathProvider.cpp  ShortestPathProvider.hpp  SingleQueryProvider.cpp  SingleQueryProvider.hpp  UpdateDelay.cpp  UpdateDelay.hpp  UpdateProvider.cpp  UpdateProvider.hpp
TrainProvider/tests/: CMakeLists.txt  database_tests.cpp
TrainProvider_tests/: CMakeLists.txt  FastTrainService_test.cbp  TrainProvider_tests  database_tests.cpp
TrainProvider_tests/include/: database_tests.hpp
Utils/: CMakeLists.txt
Utils/include/: Calendar.hpp  JThread.hpp  LambdaThread.hpp  Logger.hpp  RequestsPool.hpp  ScheduleThread.hpp  Utils.hpp
Utils/src/: Calendar.cpp  JThread.cpp  Logger.cpp  RequestsPool.cpp  Utils.cpp
Utils/tests/: CMakeLists.txt  calendar_test.cpp
Utils_tests/: CMakeLists.txt  calendar_test.cpp
database/: .gitignore  Dockerfile  docker-compose.yml  import.cypher  init.sh
database/data/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
include/: DatabaseUtils.hpp  JThread.hpp  LambdaThread.hpp  Logger.hpp  ScheduleThread.hpp  Server.hpp  Utils.hpp
src/: LambdaThread.cpp  Logger.cpp  ScheduleThread.cpp  Server.cpp  Utils.cpp
src/Client/: ActionSelector.cpp  ActionSelector.hpp  CMakeLists.txt  Calendar.cpp  Calendar.hpp  CitySelector.hpp  Client.cpp  Client.hpp  DateSelector.cpp  DateSelector.hpp  DateWidget.cpp  HourWidget.cpp  SearchButton.cpp  SearchWidget.cpp  main.cpp
src/Server/: CMakeLists.txt  ClientThread.cpp  ClientThread.hpp  DatabaseManager.cpp  DatabaseManager.h  DatabaseUtils.cpp  JThread.cpp  PathFinderRequest.cpp  PathFinderRequest.hpp  RequestTask.hpp  RequestTaskFactory.cpp  RequestTaskFactory.hpp  RequestWorker.cpp  RequestWorker.hpp  RequestsPool.cpp  RequestsPool.hpp  Server.cpp  Utils.cpp  main.cpp
src/Server/Requests/: ArrivalsRequest.cpp  ArrivalsRequest.hpp  AutocompleteRequest.cpp  AutocompleteRequest.hpp  DeparturesRequest.cpp  DeparturesRequest.hpp  PathFinderRequest.cpp  RequestTask.hpp  RequestTaskFactory.cpp  RequestTaskFactory.hpp
